--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
-streamlit
-folium
-streamlit-folium
+flask
+pandas
+numpy
+requests
+joblib
+matplotlib
 sentinelhub
-openmeteo-requests
+openmeteo_requests
+retrying
 planetary_computer
-pystac-client
+pystac_client
 stackstac
 rioxarray
 rasterio
-matplotlib
-joblib
-retrying
-numpy
-pandas
-flask
-request
